--- a/views/User/index.html
+++ b/views/User/index.html
@@ -58,7 +58,7 @@
             <div class="content-head" style="background-image: url(../../image/index_bg.jpg);">
                 <div class="mask">
                     <div class="title">
-                        <p>更便捷的在线考试</p>
+                        <p>便捷的在线考试</p>
                         <span class="glyphicon glyphicon-chevron-down"></span>
                     </div>
                 </div>
